# haskell-snake-game

./: README.md  haskell-snake-game.cabal  stack.yaml
executable/: Main.hs
