name: haskell-snake-game
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak
synopsis: The snake game.
description:
    <https://en.wikipedia.org/wiki/Snake_(video_game)>
category: Game

source-repository head
    type: git
    location: https://github.com/tfausak/haskell-snake-game

library
    exposed-modules:
        Snake
    build-depends:
        base >=4.7 && <4.9,
        gloss >=1.9 && <1.10,
        random >=1.1 && <1.2
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

executable haskell-snake-game
    main-is: Main.hs
    build-depends:
        base -any,
        haskell-snake-game -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

